initial portfolio setup

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <!-- Main Content -->
   <main>
     <section class="hero">
-      <h1>Hello, I'm [Your Name]!</h1>
-      <img src="images/me.jpg" alt="A picture of me" class="my-photo" />
+      <h1>John Randazzo</h1>
+      <img src="images/ollantaytambo.JPG" alt="Me" class="my-photo" />
       <p>
         Coming soon...
       </p>
@@ -31,7 +31,7 @@
   
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Your Name</p>
+    <p>&copy; 2025 John Randazzo</p>
   </footer>
 </body>
 </html>
