initial portfolio setup

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,8 @@
 
   <main>
     <h2>Blog</h2>
-    <p>Welcome to my blog. Stay tuned for posts about data science, web dev, and more!</p>
+    <img src="images/horsey.png" alt=" " class="my-photo" />
+    <p>Coming soon...</p>
 
     <!--
       Eventually you could link to separate blog post pages, or 
