initial portfolio setup

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 
   <main>
     <h2>Blog</h2>
-    <img src="images/horsey.png" alt=" " class="my-photo" />
+    <img src="images/horsey.png" alt=" " class="image" />
     <p>Coming soon...</p>
 
     <!--
