--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main>
     <section class="hero">
       <h1>John Randazzo</h1>
-      <img src="images/ollantaytambo.JPG" alt="Me" class="my-photo" />
+      <img src="images/ollantaytambo.JPG" alt="Me" class="image" />
       <p>
         Coming soon...
       </p>
