add intro section css format

--- a/blog.html
+++ b/blog.html
@@ -17,19 +17,14 @@
     </nav>
   </header>
 
+  <!-- Main Content -->
   <main>
-    <h2>Blog</h2>
-    <img src="images/horsey.png" alt=" " class="image" />
-    <p>Coming soon...</p>
-
-    <!--
-      Eventually you could link to separate blog post pages, or 
-      embed them directly on this page. Example:
-      <article>
-        <h3><a href="posts/first-post.html">My First Post</a></h3>
-        <p>Short summary...</p>
-      </article>
-    -->
+    <div class="intro-section">
+      <img src="images/horsey.png" alt="me" class="intro-image" />
+      <p>
+        Coming soon...
+      </p>
+    </div>
   </main>
 
   <footer>
