--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
   
   <!-- Main Content -->
   <main>
-    <section class="hero">
-      <h1>John Randazzo</h1>
-      <img src="images/ollantaytambo.JPG" alt="Me" class="image" />
+    <div class="intro-section">
+      <img src="images/ollantaytambo.JPG" alt="me" class="intro-image" />
       <p>
         Coming soon...
       </p>
-    </section>
+    </div>
   </main>
   
   <!-- Footer -->
